docs(simple-bank): adicionada documentação swagger para o handler Transfer
